# VRChatAutoFishing

./: .gitignore  README.md  RELEASE_NOTES.md  auto_fishing_gui.py  auto_fishing_gui.spec  build.bat  plans.md  pyproject.toml  requirements.txt  run-py_gui.bat  安装依赖.bat  开发需求
auto-fishing/: auto-fishing.sln
auto-fishing/auto-fishing/: AutoFishingApp.cpp  AutoFishingApp.h  FishingConfig.h  OSCClient.cpp  OSCClient.h  Resource.h  VRChatLogHandler.cpp  VRChatLogHandler.h  auto-fishing.cpp  auto-fishing.rc  auto-fishing.vcxproj  auto-fishing.vcxproj.filters  config.json
